Corrected mistakes in Shloka-301 BhumiKanda.yaml
Corrected mistakes in Shloka-301 BhumiKanda.yaml

--- a/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
+++ b/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
@@ -5267,7 +5267,7 @@
       gender: m
     - prati: त्रिलोक
       gender: m
-बुधैर्वन्दनमाला तु तोरणं परिकीर्यते । आरोहणं स्यात्सोपानं  श्रेणिरधिरोहिणी ॥:
+बुधैर्वन्दनमाला तु तोरणं परिकीर्त्यते । आरोहणं स्यात्सोपानं  निःश्रेणिरधिरोहिणी ॥:
   entries:
   - head: नगर
     verify: false
