--- a/Output/Vaijayanti_Kosha/3_BhumiKhandah/8_Vaishaadyaayah.yaml
+++ b/Output/Vaijayanti_Kosha/3_BhumiKhandah/8_Vaishaadyaayah.yaml
@@ -1161,7 +1161,7 @@
       gender: n
     - prati: त्रिगुणाकर
       gender: m
-रिष्ट एवं द्विष्टे शम्बाम्ऋतमिहाधिकम् । बीजाकृतं तूक्तं प्रहतप्रसुखालिषु ॥:
+त्रिष्कृष्ट एवं द्विष्कृष्टे शम्बाम्ऋतमिहाधिकम् । बीजाकृतं तूप्तकृष्टं प्रहतप्रमुखास्त्रिषु ॥:
   entries:
   - head: द्विष्ट
     verify: false
@@ -1193,7 +1193,7 @@
     syns:
     - prati: सुख
       gender: n
-लोष्टोऽली दरिणिने क्ली लेष्टुनौ यृतु सृत्तिका । पुरीषं मृत्तिकाचूर्णं मृत्सा मृत्स्ना प्रशस्तभृत् ॥:
+लोष्टोऽस्त्री दरिणिर्न क्ली लेष्टुर्ना मृत्तु मृत्तिका । पुरीषं मृत्तिकाचूर्णं मृत्सा मृत्स्ना प्रशस्तभृत् ॥:
   entries:
   - head: लोष्ट
     verify: false
@@ -1224,7 +1224,7 @@
       gender: n
     - prati: मृत्तिकाचूर्ण
       gender: n
-मरुका विष्टकाया विद्धस्तु क्षारशक्तिका । पूलिः वयां रजः पांसुः रेणुः पुंस्यथ कदम े॥:
+झरुका त्विष्टकाया विडूषस्तु क्षारमृत्तिका । धूलिः स्त्रियां रजः पांसू रेणुः पुंस्यथ कर्दमे ॥:
   entries:
   - head: रेणु
     verify: false
@@ -1250,7 +1250,7 @@
     syns:
     - prati: विद्ध
       gender: m
-दारिपत्परिपत्पङ्कचिकरिलाश्च निषद्वरः | शाद्वकीलजम्बूलान् वप्रोऽल्ली पालिराल्यपि ॥:
+दारिपत्परिपत्पङ्क चिकिलाश्च निषद्वरः | शादावकीलजम्बाला वप्रोऽस्त्री पालिराल्यपि ॥:
   entries:
   - head: निषद्वर
     verify: false
@@ -1287,7 +1287,7 @@
       gender: f
     - prati: अल्ली
       gender: f
-तत्रामभ्ये कृता साल्पा स्थाला स्याद् अथ लाङ्गलम् । हलं गोदारणं सीरम् ईषा सीरादि दण्डकः ॥:
+क्षेत्रमध्ये कृता साल्पा स्थाला स्यादथ लाङ्गलम् । हलं गोदारणं सीरमीषा सीरादिदण्डकः ॥:
   entries:
   - head: लाङ्गल
     verify: false
@@ -1318,7 +1318,7 @@
       gender: f
     - prati: दण्डक
       gender: m
-निरीषः कर्षकः फालः शम्या तु युगकीलकम् । योक्त्रं तु योत्रमाबन्धः खनित्रमवदारणम् ॥:
+निरीषः कृर्षकः फालः शम्या तु युगकीलकम् । योक्त्रं तु योत्रमाबन्धः खनित्रमवदारणम् ॥:
   entries:
   - head: हल
     verify: false
@@ -1358,7 +1358,7 @@
       gender: n
     - prati: अवदारण
       gender: n
-गोदारणं तु इन्दुमधिः क्षणूस्तु तन्मुखे। प्रतोदः प्राजनं तोत्र कोटिशो लोष्टमञ्जलिः॥ २॥:
+गोदारणं तु कुन्दालमभ्रिः स्त्री क्ष्णूस्तु तन्मुखे। प्रतोदः प्राजनं तोत्रं कोटिशो लोष्टभञ्जनः ॥:
   entries:
   - head: तोत्र
     verify: false
@@ -1401,7 +1401,7 @@
       gender: m
     - prati: मधिस्
       gender: m
-दात्रं लवित्रमसिदो यो ऽस्य मुष्टिः स वण्टकः। स्यात्समीकरणं मत्यं सीता लाङ्गलपद्धतिः ॥:
+दात्रं लवित्रमसिदो योऽस्य मुष्टिः स वण्टकः। स्यात्समीकरणं मत्यं सीता लाङ्गलपद्धतिः ॥:
   entries:
   - head: दात्र
     verify: false
