--- a/Output/Vaijayanti_Kosha/3_BhumiKhandah/8_Vaishaadyaayah.yaml
+++ b/Output/Vaijayanti_Kosha/3_BhumiKhandah/8_Vaishaadyaayah.yaml
@@ -1944,7 +1944,7 @@
       gender: m
     - prati: दरेणुक
       gender: m
-स्नेहपूरे तु फलकः कर्षायौ पाकचूडकौ | वर्चलामसृण्यौ च क्षुमा चोमाऽप्यतस्यपि ॥:
+स्नेहपूरे तु फलकः कर्षायौ पाकचूडकौ | सुवर्चलामसृण्यौ च क्षुमा चोमाऽप्यतस्यपि ॥:
   entries:
   - head: फलक
     verify: false
@@ -1983,7 +1983,7 @@
       gender: f
     - prati: चोमा
       gender: f
-खल्वे तु पवनिष्पावौ शिम्बिकाऽस्य प्रियङ्गुका । अलसान्द्रे राजमाषो निष्पावः श्वेतशिम्बिका ॥:
+खल्वे तु पवनिष्पावौ शिम्बिकाऽस्य प्रियैलिका । अलसान्द्रे राजमाषो निष्पावः श्वेतशिम्बिका ॥:
   entries:
   - head: निष्पाव
     verify: false
@@ -2009,7 +2009,7 @@
       gender: m
     - prati: प्रियङ्गुका
       gender: f
-छर्ष्णवदन्ते खलकुलं तागृन्तः शुलस्थकः ॥:
+काकाण्डः स्याच्चेदनिका कृष्णशिमम्बिर्विचक्षणा | कृष्णवृन्ते खलकुलं ताम्रवृन्तः कुलस्थकः ॥:
   entries:
   - head: खल
     verify: false
