--- a/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
+++ b/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
@@ -6847,7 +6847,7 @@
       gender: m
     - prati: मायी
       gender: m
-आधूनः स्यादौदरिको भक्षको घस्मरोऽद्मरः। तमसेचनकं प्राहुस्तृप्तिर्यस्य न जायते ॥:
+आद्यूनः स्यादौदरिको भक्षको घस्मरोऽद्मरः। तमसेचनकं प्राहुस्तृप्तिर्यस्य न जायते ॥:
   entries:
   - head: भक्षक
     verify: false
@@ -6866,7 +6866,7 @@
     syns:
     - prati: तमसेचनक
       gender: m
-परान्नः परपिण्डादः परजातः परेधितः । सर्वान्नीनः स्वेभक्षो मांसादी शौष्कलः स्मृतः ॥:
+परान्नः परपिण्डादः परजातः परौधितः। सर्वान्नीनः सर्वभक्षो मांसादी शौष्कलः स्मृतः ॥:
   entries:
   - head: परान्न
     verify: false
@@ -6888,8 +6888,8 @@
       gender: m
     - prati: शौष्कल
       gender: m
-? जातैः परदुःखहरिणः, ऋजुहरिण, ररोहरण, श्वणश्च मधुमारी, निगर्थः, निग्रन्थः, इतरः, दण्डाजनिकः, दांडाजनिकः, दंडाजनिकः, दांडोजनिकः, कापटिकः, परधिकः, परेषु तः। सौष्कलः, मौष्कलः, मौष्कलिः, प्रवणः, प्रह्वस्तत्परश्च। परायणः, व्युतन्नः, प्रहतः, क्षुण्णः, संस्कृतश्च निगद्यते ॥
-: entries:
+जातैः परदुःखहरिणः, ऋजुहरिण, ररोहरण, श्वणश्च मधुमारी, निगर्थः, निग्रन्थः, इतरः, दण्डाजनिकः, दांडाजनिकः, दंडाजनिकः, दांडोजनिकः, कापटिकः, परधिकः, परेषु तः। सौष्कलः, मौष्कलः, मौष्कलिः ॥: 
+  entries:
   - head: दण्डाजनिक
     verify: false
     gender: m
@@ -6936,7 +6936,9 @@
       gender: m
     - prati: मौष्कलि
       gender: m
-लोभं लोलुपं लोलं लालसं खल्पटं विदुः। भर्तृमरणविलासनोत्सुकः प्रसृतः स्मृतः॥:
+उच्यते प्रवणः प्रह्वस्तत्परश्च परायणः। व्युत्पन्नः प्रहतः क्षुण्णः संस्कृतश्च निगद्यते ॥:
+  entries:
+लोलुभं लोलूपं लोलं लालसं लम्पटं विदुः। प्रतूर्णस्त्वरितस्तूर्ण उत्सुकः प्रसृतः स्मृतः ॥:
   entries:
   - head: लोभ
     verify: false
@@ -6960,7 +6962,7 @@
       gender: m
     - prati: प्रसृत
       gender: m
-शूरो न चिकीर्षति मर्त्यार्थं भवेत् | दरित्रचकितो मित्रस्तो मीलितश्च कारः ॥:
+शूरो वीरश्च विक्रान्तो भटश्चारभटो भवेत्। दरितश्चकितो भीतस्त्रस्तो भीरुश्च कातरः ॥:
   entries:
   - head: शूर
     verify: false
@@ -6982,7 +6984,7 @@
     - prati: कार
       gender: m
     qual: मीलित (hidden/concealed)
-भीतः श्रसेति नातिनाना्थेवाचकाः । महोत्साहो महायोगो महेन सयान्महामनाः ॥:
+क्षुभितः शंङ्कितषश्चेति नातिनानार्थवाचकाः। महोत्साहो महोद्योगो महेच्छः स्यान्महामनाः ॥:
   entries:
   - head: महामनस्
     verify: false
@@ -7002,7 +7004,7 @@
     syns:
     - prati: श्रस
       gender: m
-उषस्तु तयोर्दीर्घो महामारो उच्यते ॥:
+उदात्तश्च तथोदीर्णो महात्मोदार उच्यते। आढ्यः समृद्धो धनवानिन ईशो धनीश्वरः ॥:
   entries:
   - head: उषस्
     verify: false
@@ -7018,25 +7020,7 @@
       gender: m
     - prati: दीर्घ
       gender: m
-आढघो गमद भगवानिह शशो अपि ॥:
-  entries:
-  - head: भगवत्
-    verify: false
-    gender: m
-    syns:
-    - prati: आढघ
-      gender: m
-    - prati: भगवत्
-      gender: m
-  - head: शशक
-    verify: false
-    gender: m
-    syns:
-    - prati: शशक
-      gender: m
-    - prati: शशिन्
-      gender: m
-अभ्यागारिकमिच्छन्तु म्वव्यापतं जनाः ॥:
+अभ्यागारिकामिच्छन्ति कुटुम्बव्यापृतं जनाः। प्रान्थोऽध्वगोऽध्वनीनः स्यादध्वन्यः पथिकस्तथा ॥:
   entries:
   - head: अभ्यागार
     verify: false
@@ -7050,20 +7034,7 @@
     syns:
     - prati: जन
       gender: m
-पान्थोऽथवदगो ऽवनीनः स्यादध्वन्य पथिकस्तथा ॥:
-  entries:
-  - head: पान्थ
-    verify: false
-    gender: m
-    syns:
-    - prati: पान्थ
-      gender: m
-    - prati: अध्वन्य
-      gender: m
-    - prati: पथिक
-      gender: m
-    qual: traveler, wayfarer
-ज्वालो जवनो वेगी पावकः शम्बलं स्मृतम् । आवेशिकः प्राधुषिकः आगन्तुरतिथिः स्मृतः ॥:
+जङ्घालो जवनो वेगी पाथेयं शम्बलं स्मृतम्। आवेशिकः प्राघुणक आगन्तुरतिथिः स्मृतः ॥:
   entries:
   - head: अग्नि
     verify: false
@@ -7093,8 +7064,8 @@
     syns:
     - prati: शम्बल
       gender: n
-? आतिथ्यं तयातिथ्यमातिकेयौ च कथ्यते । अर्थी मार्गणकः प्रोक्तो याचकश्च वनीपकः ॥ ३५९ ॥ अध्येषणैषणा याच्ञा याचना प्रार्थना स्मृता । षड्भावनुमुक्षितः क्षीणातो जिघत्सुः क्षुधितस्तथा ॥
-: entries:
+आतिथेयं तथातिथ्यमातिथेयी च कथ्यते। अर्थी मार्गणकः प्रोक्तो याचकश्च वनीपकः ॥:
+  entries:
   - head: अतिथि
     verify: false
     gender: m
@@ -7131,6 +7102,8 @@
       gender: m
     - prati: क्षीणात
       gender: m
+अध्येषणैषणा याच्ञा याचना प्रार्थना स्मृता। क्षुद्वान्बुभुक्षितः प्सातो जिघत्सुः क्षुधितस्तथा ॥: 
+  entries:
 प्रहितः श्रोत्रं उत्सकः परस्ततः, प्रसितः महातम्यो माहात्म्यः। आम्नाता कुटुम्बो जंवालो जाम्भालो, जघनोऽवेशकः॥:
   entries:
   - head: श्रोत्र
@@ -7181,23 +7154,7 @@
       gender: m
     - prati: अवेशक
       gender: m
-अशनाया बुभुक्षा च पिपासाक्षुत्कुधाः समाः । द्वितीयकाण्डम् ॥:
-  entries:
-  - head: बुभुक्षा
-    verify: false
-    gender: f
-    syns:
-    - prati: अशना
-      gender: f
-    - prati: बुभुक्षा
-      gender: f
-    - prati: क्षुत्
-      gender: f
-    - prati: कुधा
-      gender: f
-    - prati: पिपासा
-      gender: f
-कोपनः क्रोधनः क्रोधी रोषणः स्याद् अमर्षणः ॥:
+अशनाया बुभुक्षा प्सा जिघत्साक्षुत्क्षुधाः समाः। कोपनः क्रोधनः क्रोधी रोषणः स्यादमर्षणः ॥:
   entries:
   - head: क्रोध
     verify: false
@@ -7213,7 +7170,7 @@
       gender: m
     - prati: अमर्षण
       gender: m
-कोपः क्रोधस्तथा मर्षो रोषः प्रतिघश्च सः। तृषितस्तर्षितः शोकः पिपासुश्च पिपासितः ॥:
+कोपः क्रोधस्तथामर्षो रोषः प्रतिघ उच्यते। तृषितस्तर्षितः प्रोक्तः पिपासुश्च पिपासितः ॥:
   entries:
   - head: कोप
     verify: false
@@ -7247,7 +7204,7 @@
     syns:
     - prati: शोक
       gender: m
-उच्यते। उदन्या तृषेतृ तृष्णापिपासा च समाः स्मृताः। ४ तृष्णको ग्रुधो गृध्नुलिप्सुर्लब्धोऽभिलाषुकः॥:
+उदन्या तर्षतृट्तृष्णापिपासाश्च समाः स्मृताः। तृष्णको गर्धनो गृध्नुर्लिप्सुर्लुब्धोऽभिलाषुकः ॥:
   entries:
   - head: तृष्णा
     verify: false
@@ -7275,7 +7232,7 @@
       gender: m
     - prati: अभिलाषुक
       gender: m
-अत्र तृष्णाभिलाषो किप्सा शा घनादृग्धनोच्यते । अधरो हीनवादी स्यात् प्रसक्तः प्रसृतः स्मृतः ॥:
+तृष्णाभिलाषो लिप्साशा धनाया गर्धनोच्यते। अधरो हीनवादी स्यात्प्रसक्तः प्रसृतः स्मृतः ॥:
   entries:
   - head: तृष्णा
     verify: false
@@ -7305,7 +7262,7 @@
       gender: m
     - prati: स्मृत
       gender: m
-दासो दासेरकचेटो भृत्यः किङ्करो मतः । लक्ष्यो मधुरवाक् प्रोक्तः स्थूललक्षो बहुव्ययी ॥:
+दासो दासेरकश्चेटो भुजिष्यः किङ्करो मतः। श्लक्ष्णो मधुरवाक् प्रोक्तः स्थूललक्षो बहुव्ययी ॥:
   entries:
   - head: दास
     verify: false
@@ -7334,7 +7291,7 @@
     syns:
     - prati: मधुरवाक्
       gender: f
-प्रियवाग्दानशीलश्च वदान्यः परिकीर्तितः । भवेदक्षयगतो दैत्यः प्रणम्यो ऽसंमतो मतः ॥:
+प्रियवाग्दानशीलश्च वदान्यः परिकीर्तितः। भवेदक्षिगतो द्वेष्यः प्रणाय्योऽसंमतो मतः ॥:
   entries:
   - head: वदान्य
     verify: false
@@ -7363,8 +7320,10 @@
     - prati: प्रणम्य
       gender: m
     qual: one who should be bowed to or respected
-? चक्षुष्यः सुभगो ज्ञेयो वल्लभो दयितः श्रियः। गेहेनर्दी गेहेशूरः पिण्डीशरश्च स्थानस्थः॥ यो परान् द्वेष्टि गोष्ठं तं विदुर्बुधाः। असौ पञ्चजनीनः स्याद्यो भाण्डादिरतो नरः॥
-: entries:
+चक्षुष्यः सुभगो ज्ञेयो वल्लभो दयितः प्रियः। गेहेनर्दी गेहेशूरः पिण्डीशरश्च कथ्यते॥:  
+  entries:
+स्थानस्थो यो परान् द्वेष्टि गोष्ठश्वं तं विदुर्बुधाः। असौ पञ्चजनीनः स्याद्यो भाण्डादिरतो नरः॥: 
+  entries:
   - head: प्रिय
     verify: false
     gender: m
@@ -7396,7 +7355,7 @@
     syns:
     - prati: स्थानस्थ
       gender: n
-वैरागिको विरागार्हो धनवानस्तिमान्मतः । प्रेष्यः प्रोक्तः परिस्कन्दः कर्मशूरश्च कमठः ॥:
+वैरङ्गिको विरागार्हो धनवानस्तिमान्मतः। प्रेष्यः प्रोक्तः परिस्कन्दः कर्मशूरश्च कर्मठः ॥:
   entries:
   - head: वैराग्य
     verify: false
@@ -7430,7 +7389,7 @@
       gender: m
     - prati: कमठ
       gender: m
-अलंकर्मी च इत्युक्तः कर्मशीलस्तु यः पुमान् । उत्साहस्त्वरितो ज्ञेयो विश्रब्धः स्थिर उच्यते ॥:
+अलङ्कर्मीण इत्युक्तः कर्मशीलस्तु यः पुमान्। उत्तालस्त्वरितो ज्ञेयो विश्रब्धः स्थिर उच्यते॥:
   entries:
   - head: कर्मशील
     verify: false
@@ -7456,8 +7415,10 @@
       gender: m
     - prati: विश्रब्ध
       gender: m
-? इच्छ्यते तृणवीरको, किप्सा च शाधनाया, लिप्सा च साधनाया, किप्सा स्यान्धनाया, चिप्सास्यादनाया । प्रसितः प्राणहा, ध्रेणायः, प्राणच्छायः, प्रोणायः, प्राणायुः ॥ स्थिमान्समृतः, स्थिवान्मतः, स्थिमवान्मतः, प्रेक्षः परीक्ष्यः ॥ शान्वृष्लोण, सीदगोपायेन यो ऽनवच्छेत्म, आयःशूलिको मतः । अनतुदः स्यादयथको त्रिते षट् उच्यते ॥
-: entries:
+इच्छ्यते तृणवीरको, किप्सा च शाधनाया, लिप्सा च साधनाया, किप्सा स्यान्धनाया, चिप्सास्यादनाया । प्रसितः प्राणहा, ध्रेणायः, प्राणच्छायः, प्रोणायः, प्राणायुः ॥ स्थिमान्समृतः, स्थिवान्मतः, स्थिमवान्मतः, प्रेक्षः परीक्ष्यः ॥ :
+
+तीक्षणोपायेन योऽन्विचेत्स आयःशूलिको मतः। अरुन्तुदः स्याद्व्यथको वियातो धृष्ट उच्यते ॥: 
+  entries:
   - head: तृणवीरक
     verify: false
     gender: m
@@ -7503,7 +7464,7 @@
       gender: m
     - prati: परीक्ष
       gender: m
-शरारिषातको हसो नरः कूरकर्मकृत् । साधुः स आर्यः मयद्गदभावौ गृहाधिपः ॥:
+शरारुर्घातको हिस्त्रो नृशंसः क्रूरकर्मकृत्। साधुः सज्जन आर्यः स्याद्गृहमेधी गृहाधिपः ॥:
   entries:
   - head: नर
     verify: false
@@ -7535,7 +7496,7 @@
       gender: m
     - prati: भाव
       gender: m
-कुशाग्रीयमतिः प्रोक्तः सूक्ष्मदर्शी च यः पुमान् । चिद्रूपः स्यात्सहदयः सहस्तः शिक्षितायुधः ॥:
+कुशाग्रीयमतिः प्रोक्तः सूक्ष्मदर्शी च यः पुमान्। चिद्रूपः स्यात्सहृदयः सहस्तः शिक्षितायुधः ॥:
   entries:
   - head: मति
     verify: false
@@ -7579,7 +7540,7 @@
     syns:
     - prati: शिक्षित
       gender: m
-समुखः स खलु प्रोक्तो यो वक्ति प्रतिभान्वितः । नीलीरागः स विज्ञेयः स्थिरप्रेमा च यः पुमान् ॥:
+समुखः स खलु प्रोक्तो यो वक्ति प्रतिभान्वितः। नीलीरागः स विज्ञेयः स्थिरप्रेमा च यः पुमान् ॥:
   entries:
   - head: समुख
     verify: false
@@ -7607,7 +7568,7 @@
     syns:
     - prati: स्थिरप्रेमा
       gender: m
-क्षणमात्रानुरागी च हरिद्राराग उच्यते । मादी धरयतो च भ्रोक्तौ शाखिनसार्दौ ॥:
+क्षणमात्रानुरागी च हरिद्राराग उच्यते। शाली श्रेयानधृष्टौ (??) च प्रोक्तौ शालीनशारदौ ॥:
   entries:
   - head: क्षणमात्र
     verify: false
@@ -7627,7 +7588,7 @@
     - prati: सार्द
       gender: m
     qual: मादी धरयतो भ्रोक्तौ
-इराजन्सदां दाता प्रकीर्तितः । भव्यत्पन्नमतिर्ज्ञेयः सत्कर्मोत्पन्नघीनरः ॥:
+दूरार्थानर्थसन्दर्शी दीर्घदृष्टिः प्रकीर्तितः। प्रत्युत्पन्नमतिर्ज्ञेयस्तत्कालोत्पन्नधीर्नरः ॥:
   entries:
   - head: दाता
     verify: false
@@ -7653,7 +7614,7 @@
       gender: n
     - prati: कर्म
       gender: n
-यद्भविष्यो दैवपरो यद्वदः स्यादनुत्तरः। अज्ञो मातृमुखः प्रोक्तो दुर्मुखो मुखरः स्मृतः॥:
+यद्भविष्यो दैवपरो यद्वदः स्यादनुत्तरः। अज्ञो मातृमुखः प्रोक्तो मुखरः स्मृतः॥:
   entries:
   - head: दैवपर
     verify: false
@@ -7679,7 +7640,7 @@
     syns:
     - prati: मुखर
       gender: m
-कन्दो गद्यैवादी स्यात्कट्वरः कुत्सितो भवेत् । प्रकाण्डोद्धौ प्रगंसायामाक्षेपे हतकः स्मृतः ॥:
+काद्वदो गर्ह्यवादी स्यात्कट्वरः कुत्सितो भवेत्। प्रकाण्डोद्धौ प्रशांशायामाक्षेपे हतकः स्मृतः ॥:
   entries:
   - head: कन्द
     verify: false
@@ -7712,7 +7673,7 @@
     syns:
     - prati: हतक
       gender: m
-अहंयुः स्यादहङ्कारी शुभंयुः शुभसंयुतः । यथाकामी स्वरुचिः स्यात्स्वच्छन्दो निरवग्रहः ॥:
+अहंयुः स्यादहङ्कारी शुभंयुः शुभसंयुतः। यथाकामी स्वरुचिः स्यात्स्वच्छन्दो निरवग्रहः ॥:
   entries:
   - head: अहंयुक्त
     verify: false
@@ -7742,7 +7703,7 @@
       gender: m
     - prati: निरवग्रहः
       gender: m
-अनवस्थानुपरौ प्रोक्तः अरिमूलकः स्मृतः। रोगादुन्मुक्त उल्लाघः कल्यो वार्तो निरामयः॥:
+अन्वेष्टानुपदी प्रोक्तः प्रतिभूर्लग्नकः स्मृतः। रोगादुन्मुक्त उल्लाघः कल्यो वार्तो निरामंयः॥:
   entries:
   - head: रोग
     verify: false
@@ -7762,7 +7723,7 @@
       gender: m
     - prati: उल्लाघ
       gender: m
-जैवातृकः स्यादायुष्मान् बलवान् संसलो मतः । जाबालकः स्यादजाजीवः कामुकः कामी च कामुकः ॥:
+जैवातृकः स्यादायुष्मान् बलवानंसलो मतः। जाबालः स्यादाजाजीवः कम्रः कामी च कामुकः ॥:
   entries:
   - head: जैवातृक
     verify: false
@@ -7826,7 +7787,9 @@
       gender: m
     - prati: मांसल
       gender: m
-यः क्रियावान्कर्मसंयुक्तो दीर्घसूज्ञो जडक्रियः। भण्डनीयो विनिकृतो विप्रलब्धः स्यात्समुन्नतः॥:
+वेश्यापतिर्भुजङ्गः स्याद्विष्टः पल्लवकः स्मृतः। विहस्तो व्याकुलः प्रोक्तः कुण्ठो मन्दः क्रियासु यः ॥:
+ entries:
+क्रीयावान्कर्मसूद्युक्तो दीर्घसूत्रो जडक्रियः। निकृतो विप्रलब्धः स्यात्समुन्नद्धोऽतिगर्वितः॥:
   entries:
   - head: क्रिया
     verify: false
@@ -7854,7 +7817,7 @@
     syns:
     - prati: समुन्नत
       gender: m
-प्रतीक्ष्यः कथ्यते पूज्यः पूजितोऽपचितो भवेत् । र्ष्यालः कुहनः पातो जारो हरिपतिः स्मृतः ॥:
+प्रतीक्ष्यः कथ्यते पूज्यः पूजितोऽपचितो भवेत्। ईर्ष्यालुः कुहनः प्रोक्तो जारो ह्युपपतिः स्मृतः ॥:
   entries:
   - head: पूज्य
     verify: false
@@ -7882,8 +7845,10 @@
       gender: m
     - prati: हरिपति
       gender: m
-? स द्विनो ज्ञातो विदग्वर्च एक उच्यते । अटन् चरन् योऽन्तरुन्मुखं विद्यान्मुनिं विद्यादधोमुखम् । आसीन उपविष्टः स्याद् वा ऊर्ध्वं दमः स्थितः । अप्रतिहतलाघवः क्षीणो मत्तः क्षमः शक्तः अग्रगल्मः प्रौढ उच्यते ॥
-: entries:
+सरलो दक्षिणो ज्ञेयो विदग्धश्छेक उच्यते। उत्पश्यमुन्मुखं विद्यानन्युब्जं विद्यादधोमुखम् ॥:
+  entries: 
+आसीन उपविष्टः स्यादूर्ध्व ऊर्ध्वन्दमः स्थितः। क्षीवो मत्तः क्षमः शक्तः प्रगल्भः प्रौढ उच्यते ॥:
+  entries:
   - head: विद्वत्
     verify: false
     gender: m
@@ -7922,8 +7887,10 @@
       gender: m
     - prati: दम
       gender: m
-? उत्कण्ठितः भोक्तव्य विक्लवो विह्वलः स्मृतः । अलसः श्रीतको मन्दो जडो जिहीर्षुर् मन्थरः । कोपी कस्य सयालो लोभोयन्त एतमेत् । कितवः स्यादद्यूतकारो चूतमक्षवती भवेत् । अक्षो दुरोदरं प्रोक्तं सभिको द्यूतकारकः ॥
-: entries:
+उत्क उत्कण्ठितः प्रोक्तो विक्लवो विह्वलः स्मृतः। अलसः शीतको मन्दो जडो जिह्मश्च मन्थरः ॥: 
+  entries:
+पोगण्डो विकलाङ्गः स्याल्लोहलोऽव्यक्तवाग्भवेत्। कितवः स्याद् द्यूतकारो द्यूतमक्षवती भवेत्। अक्षो दुरोदरं प्रोक्तं सभिको द्यूतकारकः ॥: 
+  entries:
   - head: उत्कण्ठित
     verify: false
     gender: m
@@ -7968,25 +7935,7 @@
       gender: n
     - prati: चूत
       gender: m
-पतति किल गृधः पश्यन् पतितम् ॥:
-  entries:
-  - head: गृध
-    verify: false
-    gender: m
-    syns:
-    - prati: गृध
-      gender: m
-    - prati: पतित
-      gender: m
-  - head: पतन
-    verify: false
-    gender: n
-    syns:
-    - prati: पतन
-      gender: n
-    - prati: पतित
-      gender: n
-कुटिलाशयः । धारणेषु विशेषज्ञः ॥:
+परीक्षकः कारणिको गृह्यः पक्ष उदाहृतः। अभिजातः कुलीनः स्यात्कुचरः कुटिलाशयः॥:
   entries:
   - head: कुटिल
     verify: false
@@ -8003,7 +7952,7 @@
     - prati: विशेषज्ञ
       gender: m
     qual: ज्ञान या समझ के संदर्भ में
-अभिजातः कुलीनः स्यात्कुञ्चरः कुलजन्म च। निषादिनो गजारोहा अश्वारोहास्तु सादिनः॥ रथिनः स्यन्दनारोहा नावारोहास्तु नाविकाः॥:
+निषादिनो गजारोहा अश्वारोहास्तु सादिनः। रथिनः स्यन्दनारोहा नावारोहास्तु नाविकाः॥:
   entries:
   - head: कुलीन
     verify: false
@@ -8072,7 +8021,7 @@
     - prati: सोमपा
       gender: m
     qual: ब्राह्मण refers to a twice-born scholarly class
-ब्राह्मणः क्षत्रियो वैश्यस्त्रयो वर्णा द्विजातयः । शूद्रस्तुरीयवर्णः स्यात्तदन्त्यास्त्वन्त्यजाः स्मृताः ॥:
+ब्राह्मणः क्षत्रियो वैश्यस्त्रयो वर्णा द्विजातयः। शूद्रस्तुरीयवर्णः स्यात्तद्भेदास्वन्त्यजाः स्मृताः ॥:
   entries:
   - head: वर्ण
     verify: false
@@ -8105,7 +8054,7 @@
     - prati: शूद्र
       gender: m
     qual: Lowest social class
-ब्रह्मचार्यादयो वेदे भोक्तारश्चत्वार आश्रमाः । शूद्रोऽगहस्य एव स्यात् सत्रियो न यतिरभवेत् ॥:
+ब्रह्मचर्यादयो वेदे प्रोक्ताश्चत्वार आश्रमाः। शूद्रोऽगृहस्थ एव स्यात्क्षत्रियो न यतिर्भवेत् ॥:
   entries:
   - head: आश्रम
     verify: false
@@ -8139,7 +8088,7 @@
     syns:
     - prati: यति
       gender: m
-ब्रह्मचारी भवेद्द्वन्द्वी गृहस्थः स्नातकस्तथा । वैखानसो वानप्रस्थः संन्यासिको यतिः ॥:
+ब्रह्मचारी भवेद्वर्णी गृहस्थः स्नातकस्तथा। वैखानसो वानप्रस्थः कर्मसंन्यासिको यतिः ॥:
   entries:
   - head: ब्रह्मचारिन्
     verify: false
@@ -8189,7 +8138,7 @@
     syns:
     - prati: यति
       gender: m
-अनूचानः सर्ववेदः श्रौतस्य सांदसो मतः । प्रयातासितुरून् न आमुष्यायण इष्यते ॥:
+अनूचानः सर्ववेदः श्रोत्रियश्छान्दसो मतः। प्रख्यातात्पितुरुत्पन्नः आमुष्यायण इष्यते ॥:
   entries:
   - head: वेद
     verify: false
@@ -8206,7 +8155,7 @@
     - prati: सांदस
       gender: m
     qual: वेदाध्ययन संबंधी
-अन्वयो वंशो गोत्रं च अभिजनः कुलम् । चरित्रं चरितं सीलं चारित्रं च समं स्मृतम् ॥:
+अन्ववायोऽनवयो वंशो गोत्रं चाभिजनः कुलम्। चरित्रं चरितं शीलं चारित्रं च समं स्मृतम् ॥:
   entries:
   - head: वंश
     verify: false
@@ -8234,7 +8183,7 @@
       gender: n
     - prati: चरित्र
       gender: n
-वात्याघर्यनसम्पत्तिरिष्यते ब्रह्मवर्चसम् । ब्रह्मचर्येण बुधाः प्राहुः समस्तेन्द्रियसंयमम् ॥:
+वृत्ताध्ययनसम्पत्तिरिष्यते ब्रह्मवर्चसम्। ब्रह्मचर्यं बुधाः प्राहुः समस्तेन्द्रियसंयमम् ॥:
   entries:
   - head: संयम
     verify: false
@@ -8264,7 +8213,7 @@
     syns:
     - prati: ब्रह्मवर्चस
       gender: n
-संज्ञे उपसद्भावो मोऽभिवादो यथाविधि । उपसद्ग्रहणं चापि प्राहुः सन्तो ऽभिवादनम् ॥३९८॥:
+संज्ञेय उपसङ्ग्राह्यो योऽभिवाद्यो यथाविधि। उपसङ्ग्रहणं चापि प्राहुः सन्तोऽभिवादनम् ॥:
   entries:
   - head: अभिवाद
     verify: false
@@ -8274,7 +8223,7 @@
       gender: n
     - prati: अभिवादन
       gender: n
-निवृत्तेन्द्रियलौल्यस्तु श्रान्तः शान्तो द्विजः कथ्यते । तपःक्लेशसहो दातो ह्यन्तर्वाणी च शास्त्रवित् ॥:
+निवृत्तेन्द्रियलौल्यस्तु श्रान्तः शान्तश्च कथ्यते। तपःकलेशसहो दातो ह्यन्तर्वाणिश्च शास्त्रवित् ॥:
   entries:
   - head: द्विज
     verify: false
@@ -8312,7 +8261,7 @@
     - prati: अन्तर्वाणी
       gender: f
     qual: अंतर्मन की वाणी
-'अध्यापक उपाध्याय: व्याख्या विवरणं स्मृतम् । ऋष्यन्तेवासिनौ कावः रः भवार्थमकस्पिकः ॥':
+अध्यापक उपाध्यायो व्याख्या विवरणं स्मृतम्। शिष्यान्तेवासिनौ छात्रः शैक्षः प्राथमकल्पिकः ॥:
   entries:
   - head: अध्यापक
     verify: false
